ManyToMany - bidirection #final

--- a/_docs/ch04/10. 다대다(ManyToMany) - 단방향(Unidirectional) - 음반검색 [Song -> Genre]/01.Mapping.md
+++ b/_docs/ch04/10. 다대다(ManyToMany) - 단방향(Unidirectional) - 음반검색 [Song -> Genre]/01.Mapping.md
@@ -25,11 +25,10 @@
 
 5. 다대다 연관관계에서 관계형 데이터베이스와 JPA의 차이점
     1) 관계형 데이터베이스는 정규화된 테이블 2개로 다대다 관계를 표현할 수 없다.
-    2) 그래서 다대다 관계를 일대다, 다대일 관계로 풀어내는 연결테이블을 사용한다.
-       ![39003.png](../_resources/39003.png)
+    2) 그래서 다대다 관계를 일대다, 다대일 관계로 풀어내는 연결(조인)테이블을 사용한다.
     3) 객체는 테이블과 다르게 객체 2개로 다대다 관계를 만들 수 있다.
     4) Song 객체는 컬렉션을 사용해서 Genre들을 참조하면 되고 반대로 Genre들도 컬렉션을 사용해서 Song들을 참조하면 된다.
-    5) 데이터베이스에서는 조인테이블을 두고 일대다, 다대일 관계로 풀어낸다.
+    5) 데이터베이스에서는 연결(조인)테이블을 두고 일대다, 다대일 관계로 풀어낸다.
 
 #### 2. Entity Class: Song, User
 
@@ -47,13 +46,13 @@
    
    ```
 
-    1) @ManyToMany 와 @JoinTable 을 사용해서 연결 테이블을 바로 매핑한다.
+    1) @ManyToMany 와 @JoinTable 을 사용해서 연결(조인)테이블을 바로 매핑한다.
     2) 노래와 쟝르를 연결하는 노래_쟝르(Song_Genre)엔티티 없이 매핑을 완료할 수 있다.
     3) @ManyToMany 기본 페치 전략은 LAZY 이다.
-    4) @JoinTable.name : 연결 테이블을 지정한다.
+    4) @JoinTable.name : 연결(조인)테이블을 지정한다.
     5) @JoinTable.joinColumns : 현재 방향인 노래와 매핑할 조인 컬럼 정보를 지정한다. song_no로 지정
     6) @JoinTable.inverseJoinColumns : 반대 방향인 쟝릐와 매핑할 조인 컬럼 정보를 지정한다. genre_no로 지정했다.
-    7) @ManyToMany 매핑으로 다대다 관계를 다룰 때는 조인테이블을 신경쓰지 않아도 된다.
+    7) @ManyToMany 매핑으로 다대다 관계를 다룰 때는 연결(조인)테이블을 신경쓰지 않아도 된다.
 
 2. ex10.domain.Genre
     1) 엔티티 매핑만 하면 된다.
@@ -62,7 +61,7 @@
 #### 3. Tech. Focus
 
 1. ManyToMany 단방향(Unidirectional)의 Collection Fetch QueryDSL 구현
-2. ManyToMany 조인테이블의 문제점 이해와 해결방법
+2. ManyToMany 연결(조인)테이블의 문제점 이해와 해결방법
 3. Native SQL 사용법
  
  
