DSL & Optional 개비 #1st

--- a/_docs/ch04/01. 단일(One) - 방명록/03.QuerydslGuestbookRepository.md
+++ b/_docs/ch04/01. 단일(One) - 방명록/03.QuerydslGuestbookRepository.md
@@ -1,14 +1,14 @@
 ## 3. ex01.repository.QuerydslGuestbookRepository: QueryDSL 기반
 
-#### 1. QueryDSL은 JPQL을 사용하기 쉽게, 특히 Criteria 대용의 JPQL래퍼 라이브러리
+#### 1. QueryDSL
 
-#### 2. 쿼리를 문자열 기반이 아닌 코드로 작성한다.(다양한 쿼리함수 사용법을 익혀야 한다)
+1. JPQL을 사용하기 쉽게 기존의 Criteria 대용으로 사용하는 JPQL 래퍼 라이브러리
+2. 문자열 기반이 아닌 코드로 JPQL을 작성할 수 있다.
+3. QueryDSL이 지원하는 다양한 쿼리 메소드 사용법을 익혀야 한다.
 
-#### 3. QueryDSL를 사용하기 위한 추가 dependency가 필요
+#### 2. Dependency
 
 ```
-<!-- QueryDSL -->
-
 <dependency>
     <groupId>com.querydsl</groupId>
     <artifactId>querydsl-jpa</artifactId>
@@ -22,7 +22,7 @@
 
 ```
 
-#### 4. QueryDSL Repository에 JPAQueryFactory를 주입하기 위한 빈설정
+#### 3. QueryDSL Repository가 주입 받아야 하는 JPAQueryFactory Bean 설정
 
 ```java
 
@@ -33,15 +33,19 @@ public JPAQueryFactory jpaQueryFactory(EntityManager entityManager) {
 
 ```
 
-#### 5. 구현
+#### 4. Repository 구현
 
 1. QueryDSL를 편하게 쓰기 위해 JPAQueryFactory Bean을 주입 받는다.
-2. 영속화 관리를 위해 EntityManager 주입 받을 필요는 없다. 부모 클래스 QuerydslRepositorySupport의 getEntityManager()를 사용한다.
-3. 컴파일 오류: 쿼리타입 클래스 QGuestbook가 없기 때문에 발생!
+2. 영속화 관리를 위해 EntityManager를 따로 주입 받지 않아도 된다. EntityManager가 필요한 경우에는 부모 클래스 QuerydslRepositorySupport의
+   getEntityManager()를 사용한다.
+3. 컴파일 오류: 쿼리 타입클래스 QGuestbook가 없기 때문에 발생!!
 
-#### 6. QueryDSL를 위한 쿼리타입 QClass(쿼리용 클래스, Q로 시작) QGuestbook 생성하기
+#### 5. QClass 생성하기
 
-1. querydsl plugin 설정 (pom.xml)
+1. QueryDSL이 지원하는 쿼리 메소드를 사용하기 위해서는 엔티티 객체 그래프를 제공하는 쿼리 타입클래스라 부르는 QClass(Q로 시작), 쿼리용 클래스가 필요하다.
+2. 엔티티 클래스를 기반으로 QClass를 생성해 주는 메이븐(또는 그래들) 플러그인을 설정해야 한다.
+3. [참고] querydsl 5.x(Spring Boot 3.x, Jakarta Persistence) 부터는 플러그인 설정없이 QClass 생성이 가능하다.
+4. [참고] querydsl plugin 설정 (pom.xml)
 
     ```xml
     
@@ -55,7 +59,7 @@ public JPAQueryFactory jpaQueryFactory(EntityManager entityManager) {
                     <goal>process</goal>
                 </goals>
                 <configuration>
-                    <outputDirectory>src/main/generated</outputDirectory>
+                    <outputDirectory>${basedir}/target/generated-sources/annotations</outputDirectory>
                     <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
                     <options>
                         <querydsl.entityAccessors>true</querydsl.entityAccessors>
@@ -66,7 +70,8 @@ public JPAQueryFactory jpaQueryFactory(EntityManager entityManager) {
     </plugin>
     
     ```
-2. compile goal 실행: mvn clean compile
+
+5. compile goal 실행: mvn compile
 
    ![30002.png](../_resources/30002.png)
 
@@ -74,26 +79,23 @@ public JPAQueryFactory jpaQueryFactory(EntityManager entityManager) {
 
    ![30003.png](../_resources/30003.png)
 
-#### 7. 테스트 I: testSave
+#### Test 01: testSave
 
-1. QueryDSLGuestbookRepository.save(guestbook)
+1. ex01.repository.QuerydslGuestbookRepository.save(guestbook)
 2. 객체 영속화
 
-#### 8. 테스트 II: testFindAll01
+#### Test 02: testFindAll
 
-1. QueryDSLGuestbookRepository.findAll01()
+1. ex01.repository.QuerydslGuestbookRepository.findAll()
 2. 쿼리 메소드 from(), orderBy(), fetch() 사용
 
-#### 9. 테스트 III: testFindAll02
+#### Test 03: testFindAllWithProjection
 
-1. QueryDSLGuestbookRepository.findAll02()
-2. Projection을 위한 QueryDSL Projection, Projections.constructor(...) 사용법
+1. ex01.repository.QuerydslGuestbookRepository.findAllWithProjection()
+2. Projection을 위한 QueryDSL rojections.constructor(...) 사용법
 
-#### 10. 테스트 IV: testDelete
+#### Test 04: testDeleteByIdAndPassword
 
-1. QueryDSLGuestbookRepository.delete(Long, String)
+1. ex01.repository.QuerydslGuestbookRepository.deleteByIdAndPassword(id, password)
 2. 쿼리 메소드 delete(), where(), eq(), end(), execute() 사용
 
-#### 11. count()
-
-1. 쿼리 메소드 fetchCount()
