--- a/_docs/ch04/01. 단일(One) - 방명록/04.JpaGuestbookRepository.md
+++ b/_docs/ch04/01. 단일(One) - 방명록/04.JpaGuestbookRepository.md
@@ -1,24 +1,24 @@
 ## 4. ex01.repository.JpaGuestbookRepository: Spring Data JPA
 
-#### 1. 인터페이스 JpaRepository 소개
+#### 1. 인터페이스 JpaRepository
 
 1. Spring Data JPA에서 제공하는 인터페이스이다.
 2. 상속받은 Repoitory Interface에 기본적인 CRUD 메서드를 제공한다.
-3. 구현체는 애플리케이션 처음 시작 시, Spring Data JPA가 자동으로 생성해서 제공해 준다.
+3. 구현체는 애플리케이션 처음 시작 시, Spring Data JPA가 자동으로 생성해 DI 한다.
 4. 데이터 접근 계층(DAO, Repository) 개발할 때 구현 클래스 없이 인터페이스만 작성해도 개발을 완료할 수 있다.
-5. 다음의 Hierachy를 참고해 보면 인터페이스 JpaRepository의 상위(super)의 정의된 메소드들도 별다른 구현없이 모두 사용할 수 있다.
+5. 인터페이스 JpaRepository의 상위(super) 인터페이스에 정의된 메소드들도 별다른 구현없이 모두 사용할 수 있다.(Hierachy 참고)
 
    ![30004.png](./../_resources/30004.png)
 
-    1) 더 막강한 기능은 쿼리메소드(Query Method)다: 개발자가 정의한 메소드 이름만으로 내부에서 JPQL를 자동 생성해 준다.(예제코드 참고)
-    2) JPA NamedQuery 작성이 가능하다.
-    3) QueryDSL과 통합이 가능하다.
-    4) Specification를 통해 검색조건을 다양하게 조립하여 사용할 수 있다.
+6. 더 막강한 기능은 쿼리 메소드(Query Method)다. 개발자가 정의한 메소드 이름만으로 내부에서 JPQL를 자동 생성해 준다.
+7. NamedQuery 작성이 가능하다.
+8. QueryDSL 또는 JPQL과 통합이 가능하다.
+9. Specification를 사용해 다양한 여러 검색조건을 조립하여 검색을 할 수 있다.
 
-#### 2. 사용을 위한 설정
+#### 2. 설정
 
-1. 설정 클래스에 @EnableJpaRepositories 어노테이션으로 JPA Repositories 활성화해야 한다.
-2. JPA Repositories 활성화: 애플리케이션 실행 시, Spring Data JPA가 JpaRepository 인터페이스를 상속받은 Repository 인터페이스 구현체를 자동으로 생성 하게끔 한다.
+1. 설정 클래스에 @EnableJpaRepositories 어노테이션으로 JPA Repositories 활성화 한다.
+2. 애플리케이션 실행 시, Spring Data JPA가 JpaRepository 인터페이스를 상속받은 Repository 인터페이스의 구현체(SimpleJpaRepository)를 자동으로 생성하게끔 한다.
 
    ```java
    
@@ -34,7 +34,7 @@
 
 #### 3. 구현
 
-1. 기본적으로 JpaRepository를 상속하는 Repository 인터페이스를 생성한다.
+1. 기본적으로 JpaRepository를 상속하는 Repository 인터페이스를 정의한다.
 
    ```java
    
@@ -43,43 +43,46 @@
    }
    
    ```
-2. 이 코드만으로 다음과 같은 주요 메소드들을 별다른 구현없이 바로 사용할 수 있다.
+
+2. Repository 인터페이스 정의만으로 다음과 같은 주요 메소드들을 별다른 구현없이 바로 사용할 수 있다.
     1) CRUD 기능 : save(S), findOne(Id), exists(Id), count(), detete(T), deleteAll()
     2) 정열 및 페이징 : findAll(Sort), findAll(Pageable)
-    3) 여기에 2개의 쿼리 메소드 추가 정의: List<Guestbook> findAllByOrderByRegDateDesc(), Integer deleteByNoAndPassword(Integer id,
-       String password)
 
-#### 4. 테스트 I: testSave()
+3. 뿐만아니라, 네이밍 규칙에 맞는 메소드들을 정의만 해주면 마찬가지로 별다른 구현없이 사용이 가능하다. 2개의 쿼리 메소드를 추가하였다.
+    1) List<Guestbook> findAllByOrderByRegDateDesc()
+    2) Integer deleteByIdAndPassword(Integer id, String password)
+
+#### Test 01: testSave()
 
 1. CrudRepository.save(S)
 
-#### 5. 테스트 II: testFindAll
+#### Test 02: testFindAll
 
 1. JpaRepository.findAll()
 
-#### 6. 테스트 III: testFindAllSortByRegDateAsc()
+#### Test 03: testFindAllWithSort
 
 1. PagingAndSortingRepository.findAll(Sort)
 
-#### 7. 테스트 IV: testFindAllPagination()
+#### Test 04: testFindAllWithPageRequest
 
 1. PagingAndSortingRepository.findAll(Pageable)
 
-#### 8. 테스트 V: testFindAllByOrderByRegDateDesc
+#### Test 05: testFindAllOrderByRegDateDesc
 
 1. JPA 쿼리 메소드 예시
-2. findAllByOrderByRegDateDesc()
+2. ex01.repository.JpaGuestbookRepository.findAllByOrderByRegDateDesc()
 
-#### 9. 테스트 VI: testFindByIdAndDelete()
+#### Test 06: testDelete()
 
-1. findById(ID)
-2. CrudRepository.delete(S)
+1. findById(id)
+2. CrudRepository.delete(s)
 
-#### 10. 테스트 VII: testFindDeleteById()
+#### Test 07: testDeleteById()
 
-1. deleteById(id)
+1. CrudRepository.deleteById(id)
 
-#### 11. 테스트 VIII: testDeleteByNoAndPassword
+#### Test 08: testDeleteByIdAndPassword
 
 1. JPA 쿼리 메소드 예시
-2. deleteByNoAndPassword(id, password)
+2. ex01.repository.JpaGuestbookRepository.deleteByNoAndPassword(id, password)
