--- a/_docs/ch04/01. 단일(One) - 방명록/02.JpqlGuestbookRepository.md
+++ b/_docs/ch04/01. 단일(One) - 방명록/02.JpqlGuestbookRepository.md
@@ -1,32 +1,39 @@
 ## 2. ex01.repository.JpqlGuestbookRepository: based on JPQL
 
 #### 1. JPQL 기반 작성
-#### 2. 객체지향쿼리의 핵심은 JPQL이다. JPQL이 가장 기본이고 제일 중요
-#### 3. Criteria, QueryDSL은 문자열 쿼리 기반의 JPQL를 객체지향쿼리로 쓰기 위한 일종의 Helper Wrapping 라이브러리
-#### 4. 쿼리 로그를 보면 JPQL과 SQL이 나오는데, 이는 JPQL로 변환된 것이 최종적으로 SQL로 변환되기 때문이다.
-#### 5. 구현
-1. 영속화 
-2. TypedQuery 객체 사용 
+
+1. JPQL은 객체지향 쿼리의 기본이기 때문에 중요하다.
+2. 객체지향 쿼리인 Criteria 또는 QueryDSL은 문자열 쿼리 기반의 JPQL를 객체지향쿼리로 쓰기 위한 일종의 Helper Wrapping 라이브러리
+3. 쿼리 로그를 보면 JPQL과 SQL이 나오는데, Criteria 또는 QueryDSL로 작성된 코드가 JPQL로 우선 변환되고 다시 최종적으로 SQL로 변환되기 때문이다.
+
+#### 2. 구현
+
+1. 영속화
+2. TypedQuery 객체 사용
 3. Projection
-4. Order by 지원 
+4. Order by 지원
 5. 집합함수: 통계 쿼리 스칼라 타입 조회
 
-#### 6. 테스트 I: ex01.repository.TestJpqlGuestbookRepository.testSave
-1. JpqlGuestbookRepository.save(Guestbook)
-2. 객체 영속화
+#### 3. Test01: testSave
 
-#### 7. 테스트 II: ex01.repository.TestJpqlGuestbookRepository.testFindAll01
-1. JpqlGuestbookRepository.findAll01()
-2. TypedQuery 객체 사용
+1. ex01.repository.JpqlGuestbookRepository.save(Guestbook)
+2. 엔티티 객체 영속화
+
+#### 4. Test02: testFindAll
+
+1. ex01.repository.JpqlGuestbookRepository.findAll()
+2. TypedQuery 사용
 3. Order By 지원
 
-#### 8. 테스트 III: ex01.repository.TestJpqlGuestbookRepository.testFindAll02
-1. JpqlGuestbookRepository.findAll02()
-2. TypedQuery 객체 사용
-3. Projection: 방명록 리스트에서는 모든 정보를 담고 있는 Guestbook Entity로 받을 필요가 없다. 이런 경우 DTO(VO) 객체에 필요한 컬럼만 프로젝션한다.
-4. Order By 지원
+#### 5. Test03: testFindAllInJpql
 
-#### 9. 테스트 IV: ex01.repository.TestJpqlGuestbookRepository.testDelete
-1. JpqlGuestbookRepository.delete(Long, String)
-2. TypedQuery 객체 사용
+1. ex01.repository.JpqlGuestbookRepository.findAllInJpql()
+2. TypedQuery 사용
+3. 방명록 리스트에서는 모든 정보를 담고 있는 Guestbook Entity로 받을 필요가 없다. 이런 경우 DTO(VO) 객체에 필요한 컬럼만 Projection 한다.
+4. Order By 적용
+
+#### 6. Test04: testDeleteByIdAndPassword
+
+1. ex01.repository.JpqlGuestbookRepository.deleteByIdAndPassword(id, password)
+2. TypedQuery 사용
 3. 이름 기반(Named) Parameter Binding
