--- a/_docs/ch04/02. 다대일(ManyToOne) - 단방향(Unidirectional) - 게시판 [Board -> User]/02.JpqlBoardRepository.md
+++ b/_docs/ch04/02. 다대일(ManyToOne) - 단방향(Unidirectional) - 게시판 [Board -> User]/02.JpqlBoardRepository.md
@@ -1,46 +1,43 @@
 ## 2. ex02.repository.JpqlBoardRepository: based on JPQL
 
-#### 1. save
+#### Test 01: testSave
 
-1. 저장(insert)을 위한 엔티티 객체 영속화
-2. 주의: 엔티티 Board의 매핑 필드 user에 주입하는 엔티티 객체는 영속화 되어 있어야 한다.
-3. 테스트: ex02.repository.TestJpqlBoardRepository.testSave
+1. ex02.repository.JpqlBoardRepository.save(board)
+2. 엔티티 객체 영속화
+3. [주의] 영속화를 위한 board 객체의 user 객체는 board 객체 영속화 전에 반드시 영속화 되어야 한다.
 
-#### 2. findById01(id)
+#### Test 02: testFindById
 
-1. 한 개의 영속화 객체를 조회한다.
-2. @ManyToOne의 기본 fetch mode는 Eager Fetch(FecthType.EAGER)이기 때문에 매핑 필드 user 필드에 실제 User 객체가 세팅된다.
-3. 테스트: ex02.repository.TestJpqlBoardRepository.testFindById01
-4. 테스트 결과 살펴보기
-    1) EntityManager.find()는 Left Outer Join 으로 User 정보를 가져온다. (JPQL/SQL 로그 확인 할 것)
-    2) 엔티티 객체 Board 뿐만 아니라 User 모두 당연히 영속화 된다.
+1. ex02.repository.JpqlBoardRepository.findById(id)
+2. 한 개의 Board 엔티티를 Database에서 id로 조회하고 영속화 한다.
+3. @ManyToOne의 기본 fetch mode는 Eager(FecthType.EAGER)이기 때문에 매핑 필드 user에 실제 User 엔티티 객체가 세팅된다.
+4. EntityManager.find()는 내부적으로 Left Outer Join를 사용한다. (JPQL/SQL 로그 확인)
+5. 찾은 Board 뿐만 아니라 User 모두 영속화 된다.
 
-#### 3. findById02(id)
+#### Test 03: testFindByIdInJpql
 
-1. findById01과 마찬가지로 id로 엔티티 객체 한 개를 조회한다.
-2. findById01의 EntityManager.find()와 다르게 JPQL로 직접 조회한다.
-3. 테스트: ex02.repository.TestJpqlBoardRepository.testFindById02
-4. 테스트 결과 살펴보기
-    1) JPQL에서도 @ManyToOne의 기본 fetch mode인 Eager Fetch가 적용되지만 EntityManager.find()와 차이점은 User 정보를 가져오기 위해 Join 대신 Select
-       쿼리를 2번 실행하는 것이다.(JPQL/SQL 로그 확인 할 것)
-    2) 엔티티 객체 Board뿐만 아니라 User 모두 영속화 된다.
+1. ex02.repository.JpqlBoardRepository.findByIdInJpql(id)
+2. findById와 마찬가지로 Database에서 id로 엔티티 객체 한 개를 조회하고 영속화 한다.
+3. findById와 다른 것은 직접 JPQL를 사용하여 조회하는 것이다.
+4. JPQL에서도 @ManyToOne의 기본 fetch mode인 Eager가 적용되지만 EntityManager.find()와 다른 것은 User 정보를 가져오기 위해 Join 대신 Select
+   쿼리를 2번 실행하는 것이다.(JPQL/SQL 로그)
+5. 찾은 Board 뿐만 아니라 User 모두 영속화 된다.
 
-#### 4. findAll01()
+#### Test 04: testFindAll()
 
-1. JPQL를 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. TypedQuery 객체 사용
-3. 테스트: ex02.repository.TestJpqlBoardRepository.testfindAll01
-4. 테스트 결과 살펴보기
-    1) Join을 사용하지 않으면 @ManyToOne의 기본 fetch mode인 Eager Fetch가 적용해야 하기 때문에 Board 엔티티 객체들을 가져오기 위한 Select 쿼리가 실행된 후, 각각의
-       Board 별로 User 객체를 가져오기 위한 Select 쿼리가 개별적으로 실행된다. (JPQL/SQL 로그 확인 할 것)
-    2) 성능이슈: 1+N Select 쿼리는 성능에 문제가 될 수 있다: Join을 사용해야 한다.
+1. ex02.repository.JpqlBoardRepository.findAll()
+2. JPQL를 사용하여 다수의 Board 엔티티를 조회하고 영속화 한다.
+3. TypedQuery를 사용
+4. Join을 사용하지 않으면 @ManyToOne의 기본 fetch mode인 Eager를 적용해야 하기 때문에 Board 엔티티 객체들의 fetch를 위한 Select 쿼리가 실행된 후, 각각의
+   Board 별로 User 객체 fetch를 위한 Select 쿼리가 개별적으로 실행된다. (JPQL/SQL 로그 확인)
+5. 성능이슈: 1+N Select 쿼리는 성능에 문제가 될 가능성이 높다. 따라서 Join을 사용해야 한다.
 
-#### 5. findAll02()
+#### Test 05: testFindAllWithInnerJoin
 
-1. Inner Join을 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. TypedQuery 객체 사용
-3. 테스트: ex02.repository.TestJpqlBoardRepository.testfindAll02
-4. 테스트 결과 살펴보기
+1. ex02.repository.JpqlBoardRepository.findAllWithInnerJoin()
+2. Inner Join을 사용하여 여러 Board 엔티티 객체를 fetch 하고 영속화 한다.
+3. TypedQuery 사용
+4. 실행 JPQL
 
    ```
    select b from Board b inner join b.user u order by b.regDate desc
@@ -48,91 +45,87 @@
    ```
 
     1) inner는 생략할 수 있다. 기본 Join은 Inner Join 이다.
-    2) Select 절에 Board만 선택하고 User는 선택하지 않았는데 두 타입을 동시에 Select절에 선택하면 타입이 명확하지 않기 때문에 TypedQuery대신에 Query를 사용하거나 프로젝션(
-       Embeded 방식)을 한다.
-    3) 이 예제에서는 Board만 선택한다. 그리고 JPQL 실행한 쿼리 로그를 확인해 보면, User와 Join을 하여도 Select에 Board만 있기 때문에 User를 가져오기 위해 Select 쿼리가
+    2) Select 절에 Board만 선택하고 User는 선택하지 않았는데 두 엔티티를 동시에 Select 절에서 선택하면 타입이 명확하지 않기 때문에 TypedQuery대신에 단순 Query를 사용하거나
+       프로젝션(
+       Embeded 방식)을 해야한다.
+    3) 이 예제에서는 Board만 선택한다. 그리고 JPQL 실행 로그를 확인해 보면, User와 Join을 하여도 Select에 Board만 있기 때문에 User를 가져오기 위해 다시 Select 쿼리가
        Board 수만큼 더 실행되는 것을 알 수 있다.
-    4) 결과는 Join을 사용하지 않은 것과 같다. 이럴 경우은 (Inner) Join 대신에 Fetch Join을 사용하는 것이다.
+    4) 사실 Join을 사용하지 않은 것과 같다. 이럴 때는 기본 Join 대신에 Fetch Join을 사용하는 것이다.
     5) (Inner) Join을 사용해야 하는 경우는 프로젝션을 해야하는 경우다.
-    6) Fetch Join은 원칙적으로 프로젝션을 할 수 없다.
+    6) 참고로 Fetch Join은 원칙적으로 프로젝션을 할 수 없다.
 
-#### 6. findAll03()
+#### Test 06: testFindAllWithFetchJoin
 
-1. Fetch Join을 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. TypedQuery 객체 사용
-3. 테스트: ex02.repository.TestJpqlBoardRepository.testfindAll03
-4. 테스트 결과 살펴보기
+1. ex02.repository.JpqlBoardRepository.findAllWithFetchJoin()
+2. Fetch Join을 사용하여 여러 Board 엔티티 객체를 fetch 하고 영속화 한다.
+3. TypedQuery 객체 사용
+4. 실행 JPQL
 
    ```
    select b from Board b join fetch b.user order by b.regDate desc
    
    ```
 
-    1) (inner) join 과 차이점은 User에 별칭을 사용하지 않았다. 사실, 사용하지 못한다.(JPQL 기본원칙, Hibernate는 허용)
-    2) 실행되는 쿼리로그를 보면 User가 select 되는 것을 확인할 수 있다.
+    1) join fetch 되는 User 엔티티에 별칭을 사용하지 못한다.(JPQL 기본원칙, Hibernate는 허용)
+    2) 실행되는 쿼리 로그를 보면 join이 제대로 작동되는 것을 알 수 있다.
     3) 별칭을 사용하지 못하기 때문에 프로젝션을 할 수 없다. 별칭을 사용할 수 있다 하더라도 Fetch Join과 함께 프로젝션을 하면 예외가 발생한다.(Hibernate에서도 마찬가지다. 별칭만 허용)
 
-#### 7. findAll03(page, size)
+#### Test 07: testFindAllWithFetchJoinAndPagination(page, size)
 
-1. Fetch Join을 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. Paging API: TypedQuery.setFirstResult(), TypedQuery.setMaxResults()
-3. TypedQuery 객체 사용
-4. 테스트: ex02.repository.TestJpqlBoardRepository.testFindAll03Pagination
+1. ex02.repository.JpqlBoardRepository.findAllWithFetchJoinAndPagination(page, size)
+2. Fetch Join을 사용하여 여러 Board 엔티티 객체를 fetch 하고 영속화 한다.
+3. 페이징을 위해 Pagination API인 TypedQuery.setFirstResult(), TypedQuery.setMaxResults()를 사용
 
-#### 8. findAll03(keyword, page, size)
+#### Test 08: testFindAllWithFetchJoinAndPaginationAndLikeSearch
 
-1. Fetch Join을 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. Paging API: TypedQuery.setFirstResult(), TypedQuery.setMaxResults()
-3. Like 검색
-4. TypedQuery 객체 사용
-5. 테스트: ex02.repository.TestJpqlBoardRepository.testFindAll03PaginationAndLikeSearch
+1. ex02.repository.JpqlBoardRepository.findAllWithFetchJoinAndPaginationAndLikeSearch(keyword, page, size)
+2. Fetch Join을 사용하여 여러 Board 엔티티 객체를 fetch 하고 영속화 한다.
+3. 페이징을 위해 Pagination API인 TypedQuery.setFirstResult(), TypedQuery.setMaxResults()를 사용
+4. Like 검색
 
-#### 9. update01(Board)
+#### Test 09: testUpdate
 
-1. 영속객체를 사용한 Update
-2. 테스트: ex02.repository.TestJpqlBoardRepository.testUpdate01
-3. 테스트 결과 살펴보기
-    1) 영속객체를 사용한 업데이트이기 때문에 먼저 EntityManager.find()를 사용하여 Board 객체를 영속화 한다.
-    2) 선별적 컬럼 업데이트처럼 보이지만 영속객체를 사용하기 때문에 전체 속성이 업데이트 된다.(문제는 없다.)
-    3) select와 update 쿼리가 2개 실행된다.
+1. ex02.repository.JpqlBoardRepository.update(board)
+2. 영속화 된 객체를 Update 한다.
+3. 영속객체를 사용하여 업데이트하기 때문에 먼저, EntityManager.find()를 사용하여 Board 객체 하나를 영속화 한다.
+4. 선별적 컬럼 업데이트처럼 보이지만 영속 객체를 사용하기 때문에 전체 속성이 업데이트 된다.
+5. 쿼리 로그를 보면 Select와 Update 쿼리가 실행된 것을 확인 할 수 있다.
 
-#### 10. update02(Board)
+#### Test 10: testUpdateInJpql
 
-1. JPQL를 직접 사용한 Update
-2. Query 객체 사용
-3. 테스트: ex02.repository.TestJpqlBoardRepository.testUpdate02
-4. 테스트 결과 살펴보기
-    1) update 쿼리만 실행된다.
-    2) 선별적 컬럼 업데이트가 가능하다.
+1. ex02.repository.JpqlBoardRepository.updateInJpql(board)
+2. JPQL를 직접 사용하여 Update 한다.
+3. 반환 타입이 값이기 때문에 Query 사용
+4. 쿼리 로그를 보면 Update 쿼리만 실행된 것을 확인 할 수 있다.
+5. Update에 영속화된 엔티티 객체가 필요없기 때문에 영속화 작업을 먼저 하지 않아도 된다.
 
-#### 11. delete01(id)
+#### Test11: testDeleteById
 
-1. 영속객체를 사용한 Delete
-2. 테스트: ex02.repository.TestJpqlBoardRepository.testDelete01
-3. 테스트 결과 살펴보기
-    1) 영속객체를 사용한 삭제이기 때문에 먼저 EntityManager.find()를 사용하여 Board 객체를 영속화 한다.
-    2) select와 delete 쿼리가 2개 실행된다.
+1. ex02.repository.JpqlBoardRepository.deleteById(id)
+2. 영속화 된 객체를 삭제한다.
+3. 영속객체를 사용하여 삭제하기 때문에 먼저 EntityManager.find()를 사용하여 Board 객체 하나를 영속화 한다.
+4. 쿼리 로그를 보면 Select와 Delete 쿼리가 실행된 것을 확인 할 수 있다.
 
-#### 12. delete02(id)
+#### Test12: testDeleteByIdInJpql
 
-1. JPQL를 직접 사용한 Delete
-2. Query 객체 사용
-3. 테스트: ex02.repository.TestJpqlBoardRepository.testDelete02
-4. 테스트 결과 살펴보기
-    1) delete 쿼리만 실행된다.
+1. ex02.repository.JpqlBoardRepository.deleteByIdInJpql(id)
+2. JPQL를 직접 사용하여 삭제한다.
+3. 반환 타입이 값이기 때문에 Query 사용
+4. 테스트: ex02.repository.TestJpqlBoardRepository.testDelete02
+5. 쿼리 로그를 보면 Delete 쿼리만 실행된 것을 확인 할 수 있다.
 
-#### 13. delete02(id, userId)
+#### Test13: testDeleteByIdAndUserId
 
-1. JPQL를 직접 사용한 Delete
-2. Query 객체 사용
-3. 게시판 삭제 비즈니스 로직에 맞게 작성된 Delete 메소드
-4. 테스트: ex02.repository.TestJpqlBoardRepository.testDelete02ByIdAndUserId
-5. 테스트 결과 살펴보기
-    1) delete 쿼리만 실행된다.
+1. ex02.repository.JpqlBoardRepository.deleteByIdAndUserId(id, userId)
+2. JPQL를 직접 사용하여 삭제한다.
+3. 반환 타입이 값이기 때문에 Query 사용
+4. 게시판 삭제 비즈니스 로직에 맞게 작성된 Delete 메소드
+5. 테스트: ex02.repository.TestJpqlBoardRepository.testDelete02ByIdAndUserId
+6. 쿼리 로그를 보면 Delete 쿼리만 실행된 것을 확인 할 수 있다.
 
-#### 14. count()
+#### Aggregation Method: count()
 
-1. JPQL 통계함수 사용
+1. JPQL 통계함수 count 사용
 
 
 
