--- a/_docs/ch04/02. 다대일(ManyToOne) - 단방향(Unidirectional) - 게시판 [Board -> User]/03.QuerydslBoardRepository.md
+++ b/_docs/ch04/02. 다대일(ManyToOne) - 단방향(Unidirectional) - 게시판 [Board -> User]/03.QuerydslBoardRepository.md
@@ -1,101 +1,113 @@
 ## 3. ex02.repository.QuerydslBoardRepository: based on QueryDSL
 
-
 #### Notes
-1. TestJpqlBoardRepository와 완전 동일한 테스트 코드이다.
-2. TestJpqlBoardRepository의 테스트 실행 시 쿼리로그 꼭 비교 분석할 것 -> 완전 일치한다.
-3. 따라서 테스트 결과 분석은 TestJpqlBoardRepository 참고.
 
-#### 1. save
+1. TestJpqlBoardRepository와 완전 동일한 테스트다.
+2. 실행되는 쿼리를 확인해보면 TestJpqlBoardRepository의 쿼리와 완전 일치한다.
+3. 테스트 내용은 TestJpqlBoardRepository 참고
 
-1. 저장(insert)을 위한 엔티티 객체 영속화
-2. 주의: 엔티티 Board의 매핑 필드 user에 주입하는 엔티티 객체는 영속화 되어 있어야 한다.
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testSave
+#### 테스트 01: testSave
 
-#### 2. findById01(id)
+1. ex02.repository.QuerydslBoardRepository.save(board)
+2. 엔티티 객체 영속화
+3. [주의] 영속화를 위한 board 객체의 user 객체는 board 객체 영속화 전에 반드시 영속화 되어야 한다.
 
-1. 한 개의 영속화 객체를 조회한다.
-2. @ManyToOne의 기본 fetch mode는 Eager Fetch(FecthType.EAGER)이기 때문에 매핑 필드 user 필드에 실제 User 객체가 세팅된다.
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testFindById01
+#### 테스트 02: testFindById
 
-#### 3. findById02(id)
+1. ex02.repository.QuerydslBoardRepository.findById(id)
+2. Database에서 id로 엔티티 객체 한 개를 조회하고 영속화 한다.
+3. QueryDSL 쿼리 메소드: from(), where(), fetchOne()
 
-1. findById01과 마찬가지로 id로 엔티티 객체 한 개를 조회한다.
-2. QueryDSL 쿼리 메소드: from(), where(), fetchOne() 사용
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testFindById02
+#### 테스트 03: testFindAll
 
-#### 4. findAll01()
+1. ex02.repository.QuerydslBoardRepository.findAll
+2. QueryDSL울 사용하여 다수의 Board 엔티티를 조회하고 영속화 한다.
+3. QueryDSL 쿼리 메소드
+    - from()
+    - orderBy()
+    - Q클래스 desc()
+    - fetch()
 
-1. JPQL를 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. QueryDSL 쿼리 메소드: from(), orderBy(), Q클래스 desc(), fetch() 사용
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testfindAll01
+#### 테스트 04: testFindAllWithInnerJoin
 
-#### 5. findAll02()
+1. ex02.repository.QuerydslBoardRepository.findAllWithInnerJoin
+2. Inner Join을 사용하여 여러 Board 엔티티 객체를 fetch 하고 영속화 한다.
+3. QueryDSL 쿼리 메소드
+    - from()
+    - innerJoin()
+    - orderBy()
+    - fetch()
 
-1. Inner Join을 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. QueryDSL 쿼리 메소드: from(), innerJoin(), orderBy(), fetch() 사용
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testfindAll02
+#### 테스트 05: testFindAllWithFetchJoin
 
-#### 6. findAll03()
+1. ex02.repository.QuerydslBoardRepository.findAllWithFetchJoin
+2. Fetch Join을 사용하여 여러 Board 엔티티 객체를 fetch 하고 영속화 한다.
+3. QueryDSL 쿼리 메소드
+    - from()
+    - innerJoin()
+    - fetchJoin()
+    - orderBy()
+    - fetch()
 
-1. Fetch Join을 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. QueryDSL 쿼리 메소드: from(), innerJoin(), fetchJoin(), orderBy(), fetch() 사용
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testfindAll03
+#### Test 06: testFindAllWithFetchJoinAndPagination(page, size)
 
-#### 7. findAll03(page, size)
+1. ex02.repository.QuerydslBoardRepository.findAllWithFetchJoinAndPagination(page, size)
+2. Fetch Join을 사용하여 여러 Board 엔티티 객체를 fetch 하고 영속화 한다.
+3. QueryDSL 쿼리 메소드
+    - from()
+    - innerJoin()
+    - fetchJoin()
+    - orderBy()
+    - offset()
+    - limit()
+    - fetch()
+4. Pagination 쿼리 메소드 offset(), limit()
+5. page index 시작: 1
 
-1. Fetch Join을 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. QueryDSL 쿼리 메소드: from(), innerJoin(), fetchJoin(), orderBy(), offset(), limit(), fetch() 사용
-3. Pagination을 위해 offset(), limit() 사용: page index 시작은 0
-4. 테스트: ex02.repository.TestQuerydslBoardRepository.testFindAll03Pagination
+#### Test 07: testFindAllWithFetchJoinAndPaginationAndLikeSearch
 
-#### 8. findAll03(keyword, page, size)
+1. ex02.repository.QuerydslBoardRepository.findAllWithFetchJoinAndPaginationAndLikeSearchs(keyword, page, size)
+2. Fetch Join을 사용하여 여러 Board 엔티티 객체를 fetch 하고 영속화 한다.
+3. QueryDSL 쿼리 메소드
+    - from()
+    - innerJoin()
+    - fetchJoin()
+    - where()
+    - orderBy()
+    - offset()
+    - limit()
+    - fetch()
+4. like 검색 적용을 위해 Q클래스 contains() 사용
+5. Pagination을 위해 offset(), limit() 사용
+6. page index: 1
 
-1. Fetch Join을 사용하여 Board 엔티티 여러 객체를 조회한다.
-2. QueryDSL 쿼리 메소드: from(), innerJoin(), fetchJoin(), where(), orderBy(), offset(), limit(), fetch() 사용
-3. like 검색 적용: Q클래스 contains() 사용
-4. Pagination을 위해 offset(), limit() 사용: page index 시작은 0
-5. 테스트: ex02.repository.TestJpqlBoardRepository.testFindAll03PaginationAndLikeSearch
+#### 테스트 08: testUpdate
 
-#### 9. update01(Board)
-
-1. 영속객체를 사용한 Update
-2. 테스트: ex02.repository.TestQuerydslBoardRepository.testUpdate01
-3. 테스트 결과 살펴보기
-    1) 영속객체를 사용한 업데이트이기 때문에 먼저 EntityManager.find()를 사용하여 Board 객체를 영속화 한다.
-    2) 선별적 컬럼 업데이트처럼 보이지만 영속객체를 사용하기 때문에 전체 속성이 업데이트 된다.(문제는 없다.)
-    3) select와 update 쿼리가 2개 실행된다.
-
-#### 10. update02(Board)
-
-1. JPQL를 직접 사용한 Update
-2. QueryDSL 쿼리 메소드: update(), set(), where(), execute() 사용
+1. ex02.repository.QuerydslBoardRepository.update(argBoard)
+2. JPQL를 직접 사용한 Update
+QueryDSL 쿼리 메소드: update(), set(), where(), execute() 사용
 3. 테스트: ex02.repository.TestQuerydslBoardRepository.testUpdate02
 
-#### 11. delete01(id)
+#### 테스트 09: testDeleteById
 
-1. 영속객체를 사용한 Delete
-2. 테스트: ex02.repository.TestQuerydslBoardRepository.testDelete01
-3. 테스트 결과 살펴보기
-    1) 영속객체를 사용한 삭제이기 때문에 먼저 EntityManager.find()를 사용하여 Board 객체를 영속화 한다.
-    2) select와 delete 쿼리가 2개 실행된다.
+1. ex02.repository.QuerydslBoardRepository.deleteById(id)
+2. QueryDSL 쿼리 메소드
+   - delete()
+   - where()
+   - execute()
 
-#### 12. delete02(id)
+#### Test10: testDeleteByIdAndUserId
 
-1. JPQL를 직접 사용한 Delete
-2. QueryDSL 쿼리 메소드: delete(), where(), execute() 사용
-3. 테스트: ex02.repository.TestQuerydslBoardRepository.testDelete02
-
-#### 13. delete02(id, userId)
-
-1. JPQL를 직접 사용한 Delete
-2. QueryDSL 쿼리 메소드: delete(), where(), execute() 사용
+1. ex02.repository.QuerydslBoardRepository.deleteByIdAndUseId(id, userId)
+2. QueryDSL 쿼리 메소드
+   - delete()
+   - where()
+   - execute()
 3. 게시판 삭제 비즈니스 로직에 맞게 작성된 Delete 메소드
-4. 테스트: ex02.repository.TestQuerydslBoardRepository.testDelete02ByIdAndUserId
 
-#### 14. count()
+#### Aggregation Method: count()
 
-1. QueryDSL의 fetchCount() 메소드 사용 
+1. QueryDSL fetchCount() 
 
 
 
