--- a/_docs/ch04/02. 다대일(ManyToOne) - 단방향(Unidirectional) - 게시판 [Board -> User]/04.JpaBoardRepository.md
+++ b/_docs/ch04/02. 다대일(ManyToOne) - 단방향(Unidirectional) - 게시판 [Board -> User]/04.JpaBoardRepository.md
@@ -2,10 +2,10 @@
 
 #### Notes
 
-1. 실무에서는 Spring Data JPA 기반 Respository를 많이 선호한다. 하지만, JPQL(QueryDSL) 기반의 Repository도 만들 수 있어야 최적의 JPA Repository 작성이
-   가능하다.
+1. 실무에서는 Spring Data JPA 기반 Respository를 많이 선호한다.
+2. 최적의 JPA Repository 작성이 가능하기 위해서는 JPQL(QueryDSL) 기반의 Repository도 작성할 수 있어야 한다.
 2. 다양한 연관관계 매핑과 함께 Spring Data JPA Repository의 기본 메소드와 쿼리 메소드만을 사용하다 보면 다양한 성능 문제에 직면할 가능성이 많다.
-3. 도메인의 복잡성에 따라서는 Spring Data JPA Repository의 지원으로 충분하지 못할 가능성이 높다.
+3. 도메인의 복잡성에 따라서는 Spring Data JPA Repository의 지원으로 충분하지 못할 가능성도 높다.
 4. 보통은 Spring Data JPA 기반 Respository를 기본으로 다음 두 가지 방법들을 함께 사용하는 것이 일반적이다.
 
     1) @Query 어노테이션과 함께 JPQL을 직접 작성
@@ -26,8 +26,8 @@
 
 #### JPA Repository와 QueryDSL 통합하기
 
-1. JPA Repostory 작성
-    1) JpaRepository를 상속하는 Repository 인터페이스를 생성하는 기존의 방식과 같다.
+1. JPA Repository 작성
+    1) JpaRepository를 상속하는 Repository 인터페이스를 정의하는 기존의 방식과 동일하다.
     2) ex02.repository.JpaBoardRepository
 
        ```java
@@ -39,7 +39,7 @@
 
 2. QueryDSL Repositry 작성
 
-    1) QuqeryDSL Repository 인터페이스 설계
+    1) QuqeryDSL Repository 인터페이스 정의
         - QueryDSL로 구현할 CRUD 메소드들을 정의한다.
         - 예제: ex02.repository.querydsl.QuerydslBoardRepository
 
@@ -53,10 +53,10 @@
           
           ```
 
-    2) QuqeryDSL Repository 인터페이스 구현: 인터페이스 구현 클래스는 2가지 반드시 지켜야할 규칙이 있다.
+    2) QuqeryDSL Repository 인터페이스 구현 클래스는 2가지 규칙을 지켜 작성해야 한다.
         - Spring Data JPA에서 제공하는 QuerydslRepositorySupport를 상속해야 한다.
         - 구현 클래스 이름은 반드시 인터페이스 이름에 'Impl'로 끝나야 한다.
-        - 예제: ex02.repository.querydsl.QuerydslBoardRepositoryImpl
+        -  ex02.repository.querydsl.QuerydslBoardRepositoryImpl
 
           ```java
             
@@ -80,7 +80,7 @@
           ```
 
 3. 통합하기
-    1) JPA Repository를 상속한 인테페이스에 정의한 QueryDSL 인터페이를 상속하면 통합은 끝이다.
+    1) JPA Repository 인테페이스와 QueryDSL 인터페이를 함께 상속하면 통합은 끝이다.
     2) 예제: ex02.repository.JpaBoardRepository
 
        ```java
@@ -115,13 +115,13 @@
 4. JPQL 사용하는 것은 TestJpqlRepository 에서 확인 한 것 처럼 Select 쿼리가 2번 실행하기 때문에 기본 메소드 CrudRepository.findById()를 사용한다.
 5. Left Outer Join 쿼리 로그 확인해 볼 것.
 
-#### 테스트 03: testFindById02
+#### 테스트 03: testFindByIdWithProjection
 
-1. repository.querdsl.QuerydslBoardRepository.findById02(no)
+1. repository.querdsl.QuerydslBoardRepository.findById(id, clazzDto)
 2. 기본 메소드 CrudRepository.findById()는 join은 되지만 Projection이 이슈가 되면 사용하지 못한다.
 3. QueryDSL Projection으로 해결
 4. (Inner) Join을 사용한다.
-5. Projection에서는 setter를 사용하는 Projections.fields()를 사용
+5. Projection에서는 Projections.fields()를 사용
 6. Projection 타겟 객체는 BoardDto 이다.
 
 #### 테스트 04: testFindAllByOrderByRegDateDesc
