ch01 / ch02 / ch03 update #1

--- a/_docs/ch02/01. Entity Mapping.md
+++ b/_docs/ch02/01. Entity Mapping.md
@@ -45,7 +45,7 @@
 
 4. [예제] ex02: IDENTITY 전략 적용(MariaDB, PostgreSQL, SQL Server, DB2)
 
-#### 4. 필드와 컬럼 매핑: @Column, @Enumerated, @Temporal, @Lob, @Type, @Trasient
+#### 4. 필드와 컬럼 매핑: @Column, @Enumerated, @Temporal, @CreationTimestamp, @UpdateTimestamp, @Lob, @Type, @Trasient, etc...
 
 1. [예제] ex03: 물리 Database의 Table로 부터 JPA Entity 매핑하기
 2. jpa.properties.hibernate.hbm2ddl.auto를 validate로 설정하여 DDL 자동 생성을 하지 않고 연결된 물리 Database의 테이블과 매핑된 엔티티의 schema
