--- a/_docs/ch04/01. 단일(One) - 방명록/03.QuerydslGuestbookRepository.md
+++ b/_docs/ch04/01. 단일(One) - 방명록/03.QuerydslGuestbookRepository.md
@@ -97,5 +97,5 @@ public JPAQueryFactory jpaQueryFactory(EntityManager entityManager) {
 #### Test 04: testDeleteByIdAndPassword
 
 1. ex01.repository.QuerydslGuestbookRepository.deleteByIdAndPassword(id, password)
-2. 쿼리 메소드 delete(), where(), eq(), end(), execute() 사용
+2. 쿼리 메소드 delete(), where(), execute() 사용
 
