--- a/_docs/ch04/01. 단일(One) - 방명록/04.JpaGuestbookRepository.md
+++ b/_docs/ch04/01. 단일(One) - 방명록/04.JpaGuestbookRepository.md
@@ -4,7 +4,7 @@
 
 1. Spring Data JPA에서 제공하는 인터페이스이다.
 2. 상속받은 Repoitory Interface에 기본적인 CRUD 메서드를 제공한다.
-3. 구현체는 애플리케이션 처음 시작 시, Spring Data JPA가 자동으로 생성해 DI 한다.
+3. 구현체는 애플리케이션 처음 시작 시, Spring Data JPA가 자동으로 생성(Generate)하고 DI 한다.
 4. 데이터 접근 계층(DAO, Repository) 개발할 때 구현 클래스 없이 인터페이스만 작성해도 개발을 완료할 수 있다.
 5. 인터페이스 JpaRepository의 상위(super) 인터페이스에 정의된 메소드들도 별다른 구현없이 모두 사용할 수 있다.(Hierachy 참고)
 
