--- a/_docs/ch04/02. 다대일(ManyToOne) - 단방향(Unidirectional) - 게시판 [Board -> User]/02.JpqlBoardRepository.md
+++ b/_docs/ch04/02. 다대일(ManyToOne) - 단방향(Unidirectional) - 게시판 [Board -> User]/02.JpqlBoardRepository.md
@@ -6,7 +6,7 @@
 2. 엔티티 객체 영속화
 3. [주의] 영속화를 위한 board 객체의 user 객체는 board 객체 영속화 전에 반드시 영속화 되어야 한다.
 
-#### Test 02: testFindById
+#### Test 02: testFind
 
 1. ex02.repository.JpqlBoardRepository.findById(id)
 2. 한 개의 Board 엔티티를 Database에서 id로 조회하고 영속화 한다.
@@ -14,14 +14,18 @@
 4. EntityManager.find()는 내부적으로 Left Outer Join를 사용한다. (JPQL/SQL 로그 확인)
 5. 찾은 Board 뿐만 아니라 User 모두 영속화 된다.
 
-#### Test 03: testFindByIdInJpql
+#### Test 03: testFindByIdWithNoJoin
 
-1. ex02.repository.JpqlBoardRepository.findByIdInJpql(id)
-2. findById와 마찬가지로 Database에서 id로 엔티티 객체 한 개를 조회하고 영속화 한다.
-3. findById와 다른 것은 직접 JPQL를 사용하여 조회하는 것이다.
+1. ex02.repository.JpqlBoardRepository.findByIdWithNoJoin(id)
+2. find와 마찬가지로 Database에서 id로 엔티티 객체 한 개를 조회하고 영속화 한다.
+3. find와 다른 것은 직접 JPQL를 사용하여 조회하는 것이다.
 4. JPQL에서도 @ManyToOne의 기본 fetch mode인 Eager가 적용되지만 EntityManager.find()와 다른 것은 User 정보를 가져오기 위해 Join 대신 Select
    쿼리를 2번 실행하는 것이다.(JPQL/SQL 로그)
 5. 찾은 Board 뿐만 아니라 User 모두 영속화 된다.
+
+
+
+
 
 #### Test 04: testFindAll()
 
@@ -46,8 +50,7 @@
 
     1) inner는 생략할 수 있다. 기본 Join은 Inner Join 이다.
     2) Select 절에 Board만 선택하고 User는 선택하지 않았는데 두 엔티티를 동시에 Select 절에서 선택하면 타입이 명확하지 않기 때문에 TypedQuery대신에 단순 Query를 사용하거나
-       프로젝션(
-       Embeded 방식)을 해야한다.
+       프로젝션(Embeded 방식)을 해야한다.
     3) 이 예제에서는 Board만 선택한다. 그리고 JPQL 실행 로그를 확인해 보면, User와 Join을 하여도 Select에 Board만 있기 때문에 User를 가져오기 위해 다시 Select 쿼리가
        Board 수만큼 더 실행되는 것을 알 수 있다.
     4) 사실 Join을 사용하지 않은 것과 같다. 이럴 때는 기본 Join 대신에 Fetch Join을 사용하는 것이다.
