--- a/_docs/ch01/02. Configuration.md
+++ b/_docs/ch01/02. Configuration.md
@@ -192,22 +192,24 @@
 
 7. spring.jpa.hibernate.use-new-id-generator-mappings 이라는 spring boot 지원 자동설정 property로 바뀌었다가 현재 deprecated
 
-#### 10. ex02.TestPesistenceConfig01: Spring Boot Auto Configuration & Fine Configuration(application.yml)
+#### 10. ex02.TestPesistenceConfig01
 
-1. 4.ex01.config.PersistenceConfig01 동일
-2. application.yml
+1. Spring Boot Auto Configuration & Fine Configuration(application.yml)
+2. ex01.config.PersistenceConfig01 동일
+3. application.yml
    ```
 
    jpa:
      database: MySQL
    
    ```
-3. -Dspring.profiles.active=test01 VM 옵션으로 테스트
+4. -Dspring.profiles.active=test01 VM 옵션으로 테스트
 
-#### 11. ex02.TestPesistenceConfig02: Spring Boot Auto Configuration & Fine Configuration(application.yml)
+#### 11. ex02.TestPesistenceConfig02
 
-1. 5.ex01.config.PersistenceConfig02 동일
-2. application.yml
+1. Spring Boot Auto Configuration & Fine Configuration(application.yml)
+2. ex01.config.PersistenceConfig02 동일
+3. application.yml
    ```
 
    jpa:
@@ -215,12 +217,13 @@
      database-platform: org.hibernate.dialect.MariaDB106Dialect
       
    ```
-3. -Dspring.profiles.active=test02 VM 옵션으로 테스트
+4. -Dspring.profiles.active=test02 VM 옵션으로 테스트
 
-#### 12. ex02.TestPesistenceConfig03: Spring Boot Auto Configuration & Fine Configuration(application.yml)
+#### 12. ex02.TestPesistenceConfig03
 
-1. 6.ex01.config.PersistenceConfig03 동일
-2. application.yml
+1. Spring Boot Auto Configuration & Fine Configuration(application.yml)
+2. ex01.config.PersistenceConfig03 동일
+3. application.yml
    ```
 
    jpa:
@@ -229,12 +232,13 @@
      generate-ddl: true
       
    ```
-3. -Dspring.profiles.active=test03 VM 옵션으로 테스트
+4. -Dspring.profiles.active=test03 VM 옵션으로 테스트
 
-#### 13. ex02.TestPesistenceConfig04: Spring Boot Auto Configuration & Fine Configuration(application.yml)
+#### 13. ex02.TestPesistenceConfig04
 
-1. 7.ex01.config.PersistenceConfig04 동일
-2. application.yml
+1. Spring Boot Auto Configuration & Fine Configuration(application.yml)
+2. ex01.config.PersistenceConfig04 동일
+3. application.yml
    ```
 
    jpa:
@@ -244,12 +248,13 @@
      show-sql: true
       
    ```
-3. -Dspring.profiles.active=test04 VM 옵션으로 테스트
+4. -Dspring.profiles.active=test04 VM 옵션으로 테스트
 
-#### 14. ex02.TestPesistenceConfig05: Spring Boot Auto Configuration & Fine Configuration(application.yml)
+#### 14. ex02.TestPesistenceConfig05
 
-1. 8.ex01.config.PersistenceConfig05 동일
-2. application.yml
+1. Spring Boot Auto Configuration & Fine Configuration(application.yml)
+2. ex01.config.PersistenceConfig05 동일
+3. application.yml
    ```
    jpa:
       properties:
@@ -262,12 +267,13 @@
                  auto: create
       
    ```
-3. -Dspring.profiles.active=test05 VM 옵션으로 테스트
+4. -Dspring.profiles.active=test05 VM 옵션으로 테스트
 
-#### 15. ex02.TestPesistenceConfig06: Spring Boot Auto Configuration & Fine Configuration(application.yml)
+#### 15. ex02.TestPesistenceConfig06
 
-1. 9.ex01.config.PersistenceConfig06 동일
-2. application.yml
+1. Spring Boot Auto Configuration & Fine Configuration(application.yml)
+2. ex01.config.PersistenceConfig06 동일
+3. application.yml
    ```
 
    jpa:
@@ -283,16 +289,18 @@
                  auto: create
       
    ```
-3. -Dspring.profiles.active=test06 VM 옵션으로 테스트
-4. hibernate.id.new_generator_mappings의 Vendor Provider 옵션의 대체 설정이었지만 지금 이 설정은 작동 안함 (deprecated)
+4. -Dspring.profiles.active=test06 VM 옵션으로 테스트
+5. hibernate.id.new_generator_mappings의 Vendor Provider 옵션의 대체 설정이었지만 지금 이 설정은 작동 안함 (deprecated)
 
-#### 16. ex02.TestPesistenceConfig07: Spring Boot Auto Configuration & Fine Configuration(application.yml)
+#### 16. ex02.TestPesistenceConfig07
 
-1. JPA 표준 설정 추가
+1. Spring Boot Auto Configuration & Fine Configuration(application.yml)
+
+2. JPA 표준 설정 추가
     1) spring.jpa.open-in-view
     2) spring.jpa.defer-datasource-initialization
 
-2. Spring Boot 지원 Hiberate Auto Configuration
+3. Spring Boot 지원 Hiberate Auto Configuration
     1) spring.jpa.hibernate.use-new-id-generator-mappings (deprecated, 설정 필요 없음)
     2) spring.jpa.hibernate.ddl-auto: spring.jpa.properties.hibernate.hbm2ddl.auto 와 완전 동일하기 때문에 설정 필요 없음
     3) spring.jpa.hibernate.naming.physical-strategy
