--- a/_docs/ch01/02. Configuration.md
+++ b/_docs/ch01/02. Configuration.md
@@ -34,7 +34,7 @@
 #### 3. ex01.config.* : Vendor Adapter & Vendor Provider 제외한 공통 설정 : Spring Bean Configuration(Explicity)
 
 1. DataSource 빈 설정
-2. Entity Mapping: ex01.domain01_05.Pet
+2. Entity Mapping: ex01.domain.Pet
 3. LocalContainerEntityManagerFactoryBean Bean 설정
     1) setPersistenceUnitName(...) : Persistence Unit Name
     2) setPackagesToScan(...) : Entity-Scan Location(Base Package)
@@ -45,7 +45,7 @@
 
 #### 4. ex01.config.PersistenceConfig01
 
-1. Entity Mapping: ex01.domain01_05.Pet
+1. Entity Mapping: ex01.domain.Pet
 2. JPA Vendor Common Configuration: database 설정
    ```
    jpaVendorAdapter.setDatabase(Database.MYSQL);
@@ -61,7 +61,7 @@
 
 #### 5. ex01.config.PersistenceConfig02
 
-1. Entity Mapping: ex01.domain01_05.Pet
+1. Entity Mapping: ex01.domain.Pet
 2. JPA Vendor Common Configuration: database-platform 설정
    ```
    jpaVendorAdapter.setDatabasePlatform("org.hibernate.dialect.MariaDB106Dialect");
@@ -78,7 +78,7 @@
 
 #### 6. ex01.config.PersistenceConfig03
 
-1. Entity Mapping: ex01.domain01_05.Pet
+1. Entity Mapping: ex01.domain.Pet
 2. JPA Vendor Common Configuration: generate-ddl 설정
    ```
    jpaVendorAdapter.setGenerateDdl(true);
@@ -92,7 +92,7 @@
 
 #### 7. ex01.config.PersistenceConfig04
 
-1. Entity Mapping: ex01.domain01_05.Pet
+1. Entity Mapping: ex01.domain.Pet
 2. JPA Vendor Common Configuration: show-sql 설정
    ```
    jpaVendorAdapter.setGenerateDdl(true);
@@ -112,7 +112,7 @@
 
 #### 8. ex01.config.PersistenceConfig05
 
-1. Entity Mapping: ex01.domain01_05.Pet
+1. Entity Mapping: ex01.domain.Pet
 2. Vendor Provider(Hibernate) 전용 설정
     - hibernate.dialect
     - hibernate.show_sql
@@ -157,7 +157,7 @@
 
 #### 9. ex01.config.PersistenceConfig06
 
-1. Entity Mapping: ex01.domain06.Emaillist
+1. Entity Mapping: ex01.domain.Emaillist
 2. Vendor Provider(Hibernate) 전용 설정: hibernate.id.new_generator_mappings
     - Primary Key 생성 전략 사용
     - 추가적으로 Entity에 Primary Key Mapping에 @Id 외에 @GenerateValue(자동생성) 추가
