--- a/_docs/ch04/01. 단일(One) - 방명록/02.JpqlGuestbookRepository.md
+++ b/_docs/ch04/01. 단일(One) - 방명록/02.JpqlGuestbookRepository.md
@@ -25,7 +25,7 @@
 2. TypedQuery 사용
 3. Order By 지원
 
-#### 5. Test03: testFindAllInJpql
+#### 5. Test03: testUpdate
 
 1. ex01.repository.JpqlGuestbookRepository.findAllInJpql()
 2. TypedQuery 사용
