--- a/_docs/ch04/01. 단일(One) - 방명록/01.PersistGuestbookRepository.md
+++ b/_docs/ch04/01. 단일(One) - 방명록/01.PersistGuestbookRepository.md
@@ -1,29 +1,31 @@
-## 2. ex01.repository.JpqlGuestbookRepository: based on JPQL
+## 2. ex01.repository.PersistGuestbookRepository: based on JPQL
 
-#### 1. JPA 표준 API 기반 작성
+#### 1. JPA 표준 API 기반
 
-1. JPA 표준 API(EntityManager's Methods)를 사용해 기본적인 CRUD 구현 
-2. Persistence Context에 영속화 Entity 객체에 대한 등록, 수정, 삭제 그리고 Id(기본키) 조회 등을 한다.
+1. JPA 표준 API(EntityManager Methods)를 사용해 기본적인 CRUD 구현 
+2. Persistence Context에 Entity 객체의 등록, 수정, 삭제 그리고 Id(기본키) 조회 등을 한다.
+3. 대상이 되는 엔티티 객체는 대부분 영속 상태에서 등록, 수정, 삭제 및 조회 등의 작업이 이루어진다.
 
 #### 2. Test 01: testSave
 
 1. ex01.repository.PersistGuestbookRepository.save(guestbook)
 2. 엔티티 객체 영속화
 
-#### 4. Test 02: testFind
+#### 3. Test 02: testFind
 
-1. ex01.repository.JpqlGuestbookRepository.find(id)
+1. ex01.repository.PersistGuestbookRepository.find(id)
 2. id로 조회한 Entity 객체 영속화
 
-#### 5. Test 03: testUpdate
+#### 4. Test 03: testUpdate
 
-1. ex01.repository.JpqlGuestbookRepository.update(guestbook)
-2. id로 조회한 Entity 영속화 객체 수정
-3. 수정할 필드를 담은 Entity 객체(Transient)를 파라미터로 전달
-4. 영속화된 Entity 객체에 대한 선택적 필드 변경 기능이 있다: copyFromTransient(entity, transientEntity) 참고
-5. 실행 쿼리는 선별 업데이트가 아닌 전체 업데이트 이다.
+1. ex01.repository.PersistGuestbookRepository.update(guestbook)
+2. id로 조회한 영속 엔티티 객체 수정
+3. 수정 필드가 세팅된 비영속(Transient) 엔티티 객체를 파라미터로 전달
+4. 다음 메소드를 사용하면 파라미터로 전달된 비영속 엔티티 객체로 부터 영속 엔티티 객체의 필드 변경을 선택적으로 할 수 있다.: [참고] JpaUtils.copyFromTransient(entity, transientEntity)
+5. 영속 엔티티 필드 변경을 선택적으로 하더라도 실행 쿼리를 보면 선별 업데이트가 아닌 전체 업데이트가 되는 것을 확인 할 수 있다.
 
-#### 6. Test 04: testDelete
+#### 5. Test 04: testDelete
 
-1. id로 조회한 Entity 영속화 객체를 비영속화 시킨다.
-2. 테이블에서는 삭제가 된다.
+1. ex01.repository.PersistGuestbookRepository.delete(id)
+2. 테이블에서 특정 id로 식별되는 row를 삭제한다.
+3. 영속화된 엔티티 객체를 비영속화 시킨다.
