--- a/_docs/ch04/01. 단일(One) - 방명록/02.JpqlGuestbookRepository.md
+++ b/_docs/ch04/01. 단일(One) - 방명록/02.JpqlGuestbookRepository.md
@@ -1,10 +1,17 @@
 ## 2. ex01.repository.JpqlGuestbookRepository: based on JPQL
 
-#### 1. JPQL 기반 작성
+#### 1. JPQL(Java Persistence Query Language) 기반
 
-1. JPQL은 객체지향 쿼리의 기본이기 때문에 중요하다.
-2. 객체지향 쿼리인 Criteria 또는 QueryDSL은 문자열 쿼리 기반의 JPQL를 객체지향쿼리로 쓰기 위한 일종의 Helper Wrapping 라이브러리
-3. 쿼리 로그를 보면 JPQL과 SQL이 나오는데, Criteria 또는 QueryDSL로 작성된 코드가 JPQL로 우선 변환되고 다시 최종적으로 SQL로 변환되기 때문이다.
+1. EntityManager의 메소드를 사용하여 엔티티 객체를 조작하는 것은 기능이 제한적이다.
+2. 다양한 조건의 검색을 위해서는 JPQL를 직접 작성해야 한다.
+3. 검색 결과의 Sorting 및 Pagination을 위해서는 JPQL을 직접 작성해야 한다.
+4. 검색 결과의 Projection을 위해서는 JPQL을 직접 작성해야 한다.
+5. 선별적 필드 업데이트를 위해서는 JPQL을 직접 작성해야 한다.
+6. 다양한 조건의 여러 row의 삭제를 위해서는 JPQL을 직접 작성해야 한다.
+7. 하지만, JPQL에는 insert가 없다.
+8. JPQL은 객체지향 쿼리의 기본이기 때문에 중요하다.
+9. 객체지향 쿼리인 Criteria 또는 QueryDSL은 문자열로 작성해야 하는 JPQL를 메소드(객체지향 쿼리)로 작성하기 위한 일종의 Helper Wrapping 라이브러리 이다.
+10. 쿼리 로그를 보면 JPQL과 SQL이 나오는데, Criteria 또는 QueryDSL로 작성된 코드가 JPQL로 우선 변환되고 다시 최종적으로 SQL로 변환되기 때문이다.
 
 #### 2. 구현
 
@@ -14,23 +21,39 @@
 4. Order by 지원
 5. 집합함수: 통계 쿼리 스칼라 타입 조회
 
-#### 3. Test01: testSave
+#### 2. Test 01: testSave
 
-1. ex01.repository.JpqlGuestbookRepository.save(Guestbook)
-2. 엔티티 객체 영속화
+1. ex01.repository.PersistGuestbookRepository.save(guestbook)
+2. Persist Repository의 기본 CRUD 메소드 사용
+3. 엔티티 객체 영속화
 
-#### 4. Test02: testFindAll
+#### 3. Test 02: testFindById
+
+1. ex01.repository.JpqlGuestbookRepository.findById(id)
+2. TypedQuery 사용: 반환 타입이 스칼라 값이 아니거나 명확한 타입이 있는 경우에는 TypedQuery를 사용한다.
+3. Index Parameter Mapping
+4. 반환 엔티티 객체는 영속화 상태이다.
+
+#### 4. Test 03: testFindByIdWithProjection
+
+1. ex01.repository.JpqlGuestbookRepository.findById(id, dtoClass)
+2. TypedQuery 사용
+3. 다양한 Projection DTO의 타입을 파라미터로 받아 동적으로 JPQL를 생성하도록 Utility 메소드로 만들었는데 QueryDSL를 사용하면 이럴 필요가 없다.  [참고]
+   JpaUtils.queryProjectionFindById(em, entity, dtoClass)
+
+#### 5. Test 04: testFindAll
 
 1. ex01.repository.JpqlGuestbookRepository.findAll()
 2. TypedQuery 사용
-3. Order By 지원
+3. 전체 row를 별다른 조건과 sorting 없이 엔티티 리스트로 가져온다.
 
-#### 5. Test03: testUpdate
+#### 6. Test 05: testFindAllithProjection
 
-1. ex01.repository.JpqlGuestbookRepository.findAllInJpql()
+1. ex01.repository.JpqlGuestbookRepository.findAll(dtoClass)
 2. TypedQuery 사용
-3. 방명록 리스트에서는 모든 정보를 담고 있는 Guestbook Entity로 받을 필요가 없다. 이런 경우 DTO(VO) 객체에 필요한 컬럼만 Projection 한다.
-4. Order By 적용
+3. 모든 정보를 담고 있는 Guestbook Entity로 받을 필요가 없는 경우 DTO 객체에 필요한 컬럼만 Projection 한다.
+4. 다양한 Projection DTO의 타입을 파라미터로 받아 동적으로 JPQL를 생성하도록 Utility 메소드로 만들었는데 QueryDSL를 사용하면 이럴 필요가 없다.  [참고]
+   JpaUtils.queryProjectionFindAll(em, entity, dtoClass)
 
 #### 6. Test04: testDeleteByIdAndPassword
 
